name:                osz-loader
version:             0.1.0.0
synopsis:            Loads up osu! .osz files, including parsing any .osu files inside
description:         Loads up osu! .osz files, including parsing any .osu files inside
homepage:            http://github.com/Fuuzetsu/osz-loader
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
copyright:           (c) Mateusz Kowalczyk, 2014
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Game.Osu.OszLoader
                       Game.Osu.OszLoader.OsuParser
                       Game.Osu.OszLoader.OsuParser.General
                       Game.Osu.OszLoader.OsuParser.Utils
                       Game.Osu.OszLoader.Types
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8, text, attoparsec, containers
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite spec
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          Spec.hs
  hs-source-dirs:
      test
    , src

  ghc-options: -Wall

  cpp-options:
      -DTEST

  other-modules:
      Game.Osu.OszLoader.OsuParser.EditorSpec
      Game.Osu.OszLoader.OsuParser.GeneralSpec
      Game.Osu.OszLoader.OsuParser.UtilsSpec

  build-depends:
      attoparsec
    , base
    , hspec
    , QuickCheck == 2.*
    , text

source-repository head
  type:     git
  location: https://github.com/Fuuzetsu/osz-loader.git
